<resources>
    <string name="app_name">Tourism</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_app">Cari dan Simpan Lokasi terbaik untuk berbagi pengalaman Liburan yang mengasyikkan lewat Tourism App </string>
    <string name="ketentuan">Dengan mendaftar, kamu telah menyetujui ketentuan Pemakaian dan Pengaturan Privasi yang ada di Tourism App</string>
    <string name="syarat_dan_ketentuan">Saya senang sekali jika menerima email berisi rekomendasi pariwisata dan penginapan dari Tourism App </string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="about_yogyakarta">Kota Yogyakarta adalah kediaman bagi Sultan Hamengkubuwana dan Adipati Paku Alam. Kota Yogyakarta merupakan salah satu kota terbesar di Indonesia dan kota terbesar kempat di wilayah Pulau Jawa bagian selatan setelah Bandung, Malang, dan Surakarta menurut jumlah penduduk.</string>
    <string name="popular">Popular Attraction</string>
    <string name="Eat">Where to Eat</string>
    <string name="Hotels">Popular Hotels</string>

</resources>
